[gd_scene load_steps=8 format=2]

[ext_resource path="res://props/heart/heart.gd" type="Script" id=1]
[ext_resource path="res://assets/tileset.png" type="Texture" id=2]
[ext_resource path="res://assets/light_mask.png" type="Texture" id=3]
[ext_resource path="res://assets/sfx/pickup_heart.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 28.0

[sub_resource type="CircleShape2D" id=3]
radius = 5.0

[sub_resource type="Animation" id=4]
resource_name = "cycle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("tileset:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ) ]
}

[node name="heart" type="Area2D"]
monitorable = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="tileset" type="Sprite" parent="."]
z_index = 2
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 136, 144, 8, 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="light_mask" type="Sprite" parent="tileset"]
modulate = Color( 1, 0.796078, 0.537255, 0.439216 )
show_behind_parent = true
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="hit_player" type="Area2D" parent="."]
visible = false
monitorable = false
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_player"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "cycle"
anims/cycle = SubResource( 4 )

[node name="terminate_timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "sfx"
[connection signal="body_entered" from="." to="." method="_on_rage_coin_body_entered" flags=3]
[connection signal="body_entered" from="hit_player" to="." method="_on_hit_player_body_entered" flags=3]
[connection signal="timeout" from="terminate_timer" to="." method="_on_terminate_timer_timeout"]
